# ppm-framework

./: .gitignore  Dockerfile  LICENSE  NOTEBOOK_PLAN.md  README.md  build_derivations.py  compute_closeable.py  environment.yml  fly.toml  generate_figures.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.py
binder/: Dockerfile  postBuild  requirements.txt
dev/: DEPLOY.md  Dockerfile  requirements-dev.txt  run.sh  start.sh
figures/: _style.py  fig_G_Lambda_over_time.py  fig_active_inference_descent.py  fig_active_inference_rho.py  fig_active_inference_torus.py  fig_agency_lindblad.py  fig_alpha_s_twoloop.py  fig_consciousness_regime_F.py  fig_convergence_phase_diagram.py  fig_convergence_window.py  fig_cpn_selectivity.py  fig_decoherence.py  fig_decoherence_race.py  fig_duality_coverage.py  fig_dune_delta_cp.py  fig_dynamic_persistence_window.py  fig_energy_hierarchy.py  fig_experimental_roadmap.py  fig_frame_finding.py  fig_g_eff_jwst.py  fig_halo_mass.py  fig_heat_kernel_convergence.py  fig_integration_race.py  fig_lambda_comparison.py  fig_mass_spectrum.py  fig_master_predictions.py  fig_mixing_predictions.py  fig_n_reliable.py  fig_phi_aggregation.py  fig_sin2_theta_w.py  fig_three_alpha_routes.py  fig_three_vocabularies.py  fig_two_boundary_coordination.py  fig_variational_lyapunov_descent.py  fig_variational_projection_density.py  fig_zero_mode_budget.py  two_fibrations.py  v2_alpha_s_twoloop.py  v2_alpha_survival_ratio.py  v2_born_mechanism.py  (+25 more)
fly/: Dockerfile
notebooks/: 01_hierarchy_and_timescales.ipynb  02_constraint_solver.ipynb  (+9 more)
(+46 files in other folders)
