[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppm-framework"
version = "0.1.0"
description = "Projective Process Monism — Physical Constants from Topology"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jeff Wozniak" }]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
